# ape-vyper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ape-config.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: commitlint.yaml  docs.yml  draft.yaml  prtitle.yaml  publish.yaml  test.yaml
ape_vyper/: __init__.py  _cli.py  _pytest.py  _utils.py  ast.py  compiler.py  config.py  coverage.py  exceptions.py  flatten.py  flattener.py  imports.py  interface.py  traceback.py  version.py
ape_vyper/compiler/: __init__.py  api.py
ape_vyper/compiler/_versions/: __init__.py  base.py  utils.py  vyper_02.py  vyper_03.py  vyper_04.py
docs/: conf.py  index.md
docs/methoddocs/: compiler.md  exceptions.md  interface.md
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree
latest/.doctrees/methoddocs/: compiler.doctree  exceptions.doctree  interface.doctree
latest/.doctrees/userguides/: quickstart.doctree
latest/_sources/methoddocs/: compiler.md.txt  interface.md.txt
latest/_static/: custom.css
latest/methoddocs/: compiler.html  exceptions.html  interface.html
latest/userguides/: quickstart.html
tests/: ape-config.yaml  conftest.py  test_ape_reverts.py  test_cli.py  test_compiler.py  test_coverage.py  test_flatten.py  test_integration.py
tests/.build/: __local__.json
tests/contracts/: contract_no_pragma.vy  medcontract.vy
tests/contracts/failing_contracts/: contract_undeclared_variable.vy  contract_with_error.vy
tests/contracts/flatten_contracts/: hello_world.vy
tests/contracts/passing_contracts/: contract.vy  contract_no_pragma.vy  contract_with_dev_messages.vy  erc20.vy  evm_pragma.vy  flatten_me.vy  iface_abi.vyi  non_payable_default.vy  older_version.vy  optimize_codesize.vy  payable_default.vy  pragma_with_space.vy  registry.vy  registry_037.vy  traceback_contract.vy  traceback_contract_037.vy  traceback_contract_038.vy  traceback_contract_039.vy  use_iface.vy  use_iface2.vy  zero_four.vy  zero_four_module.vy  zero_four_module_2.vy  zero_four_snekmate.vy
tests/contracts/passing_contracts/DirectoryWithExtension.vy/: README.md
tests/contracts/passing_contracts/interfaces/: IFace.vy  IFaceZeroFour.vyi  IRegistry.vy  IRegistry_039.vy
tests/contracts/passing_contracts/interfaces/nested/: IFaceNested.vy
tests/contracts/passing_contracts/subdir/: zero_four_in_subdir.vy
tests/contracts/templates/: contract.template  registry.template  reverts.template  sub_reverts.template  traceback_contract.template
tests/functional/: test_ape_reverts.py  test_cli.py  test_compiler.py  test_coverage.py
tests/integration/: conftest.py  stateful_vypertest.vy  test_snekmate.py  test_vypertest.vy  test_vypertest_fuzzing.vy  test_vypertest_with_setup.vy
tests/projects/coverage_project/: README.md  ape-config.yaml  pyproject.toml
tests/projects/coverage_project/contracts/: coverage_test.vy  exclude_part_of_contract.vy  exclude_whole_contract.vy
tests/projects/coverage_project/tests/: ape-config.yaml  conftest.py  test_coverage.py
tests/projects/snekmate_from_pypi/: pyproject.toml
tests/projects/snekmate_from_python/: ape-config.yaml  pyproject.toml
tests/projects/snekmate_from_python/contracts/: zero_four_snekmate_erc20.vy
tests/projects/snekmate_not_configured/: ape-config.yaml
tests/projects/solc_json/: pyproject.toml
tests/projects/solc_json/contracts/: ContractForSolcJSON.vy
tests/projects/version_in_config/: ape-config.yaml  pyproject.toml
tests/projects/version_in_config/contracts/: v_contract.vy
tests/tests/: test_compiler.py
tests/tests/contracts/passing_contracts/: contract_37.vy
tests/tests/contracts/passing_contracts/interfaces/: IFace2.vy
tests/tests/tests/ExampleDependency/contracts/: Dependency.vy
tests/tests/tests/contracts/failing_contracts/: contract_undeclared_variable.vy  contract_unknown_pragma.vy
tests/tests/tests/contracts/passing_contracts/: contract.vy  contract_with_dev_messages.vy  erc20.vy  older_version.vy  traceback_contract.vy  use_iface2.vy
